New Feature Added and Bug Fixes.
- Added the requested GoToLauncher(<MenuName>) feature.
- Fixed the bug where the Music menu sound was not being correctly associated with the Music button.
- Fixed a bug in the translation code and added some missing translations to xlate.ini.
- Fixed bug in the File Browser and added DVD drive support.
- Expanded the ExecuteFile(<sPath>) function to also accept PrometheOS drive designations.
- Added the 720p patched xonlinedash.xbe

--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -56,10 +56,10 @@ Shutdown Xbox=Xbox\u3092\u7d42\u4e86
 Reboot=\u518d\u8d77\u52d5
 Shutdown=\u7d42\u4e86
 ###UIX Settings###
-TRUE=true
-FALSE=false
-NONE=none
-NOTHING=nothing
+TRUE=\u306f\u3044
+FALSE=\u3044\u3044\u3048
+NONE=\u7121\u3057
+NOTHING=\u7a7a\u767d
 Globe=\u5730\u7403
 Console=\u30b3\u30f3\u30bd\u30fc\u30eb
 Stock=\u30b9\u30c8\u30c3\u30af
@@ -104,6 +104,9 @@ Item 8 Title=\u30A2\u30A4\u30C6\u30E0 8 \u30BF\u30A4\u30C8\u30EB
 Item 8 Path=\u30A2\u30A4\u30C6\u30E0 8 \u30D1\u30B9
 YX Button Action=YX\u30DC\u30BF\u30F3\u64CD\u4F5C
 Advanced Mode=\u9AD8\u5EA6\u30E2\u30FC\u30C9
+Enable Discord Presence=Discord Presence \u3092\u6709\u52b9\u306b\u3059\u308b
+xbdStats IPAddress=xbdStats IP\u30a2\u30c9\u30ec\u30b9
+xbdStats Port=xbdStats \u30dd\u30fc\u30c8
 
 [DEUTSCH]
 MEMORY=Speicher
@@ -185,6 +188,9 @@ Item 8 Title=Element 8 - Titel
 Item 8 Path=Element 8 - Pfad
 YX Button Action=Y/X-Tastenaktion
 Advanced Mode=Erweiterter Modus
+Enable Discord Presence=Discord Presence aktivieren
+xbdStats IPAddress=xbdStats IP-Adresse
+xbdStats Port=xbdStats Port
 
 [FRANÇAIS]
 MEMORY=Mémoire
@@ -266,6 +272,9 @@ Item 8 Title=Titre du bouton 8
 Item 8 Path=Emplacement de 8
 YX Button Action=Raccourci YX
 Advanced Mode=Mode Avancé
+Enable Discord Presence=Activer la Présence Discord
+xbdStats IPAddress=xbdStats Adresse IP
+xbdStats Port=xbdStats Port
 
 [ESPAÑOL]
 MEMORY=Memoria
@@ -347,6 +356,9 @@ Item 8 Title=Título de item 8
 Item 8 Path=Ruta de item 8
 YX Button Action=Acción del combo YX
 Advanced Mode=Modo avanzado
+Enable Discord Presence=Habilitar Presencia de Discord
+xbdStats IPAddress=xbdStats Dirección IP
+xbdStats Port=xbdStats Puerto
 
 [ITALIANO]
 MEMORY=Memoria
@@ -428,6 +440,9 @@ Item 8 Title=Titolo dell'articolo 8
 Item 8 Path=Percorso dell'elemento 8
 YX Button Action=Azione del pulsante YX
 Advanced Mode=Modalità avanzata
+Enable Discord Presence=Abilita Presenza Discord
+xbdStats IPAddress=xbdStats Indirizzo IP
+xbdStats Port=xbdStats Porta
 
 [KOREAN]
 MEMORY=\uba54\ub9ac
@@ -463,10 +478,10 @@ Shutdown Xbox=Xbox \uae30\uae30 \uc811\uafb8\uae30
 Reboot=\ub2e4\uc2dc \uc2dc\uc791
 Shutdown=\uae30\uae30 \uc811\uafb8\uae30
 ###UIX Settings###
-TRUE=true
-FALSE=false
-NONE=none
-NOTHING=nothing
+TRUE=\ud65c\uc131\ud654
+FALSE=\ube44\ud65c\uc131\ud654
+NONE=\uc5c6\uc74c
+NOTHING=\ube48\uce78
 Globe=\uc9c0\uad6c
 Console=\ucee4\ub110
 Stock=\uc2a4\ud1a1
@@ -510,7 +525,10 @@ Item 8 Title=8\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
 Item 8 Path=8\ubc88 \ud56d\ubaa9 \uacbd\ub85c
 YX Button Action=YX \ubc84\ud2bc \ud589\ub3d9
 Advanced Mode=\uace0\uae09 \ubaa8\ub4dc
-
+Enable Discord Presence=Discord \ud604\uc7ac\u0020\uc0c1\ud0dc\u0020\ud65c\uc131\ud654
+xbdStats IPAddress=xbdStats IP \uc8fc\uc18c
+xbdStats Port=xbdStats \ud3ec\ud2b8
+ 
 [CHINESE]
 MEMORY=\u8a18\u61b6\u9ad4
 MUSIC=\u97f3\u6a02
@@ -592,6 +610,9 @@ Item 8 Title=\u9805\u76ee8\u540d\u7a31
 Item 8 Path=\u9805\u76ee8\u8def\u5f91
 YX Button Action=YX\u6309\u9215\u64cd\u4f5c
 Advanced Mode=\u9ad8\u7d1a\u6a21\u5f0f
+Enable Discord Presence=\u555f\u7528 Discord \u72c0\u614b
+xbdStats IPAddress=xbdStats IP \u4f4d\u5740
+xbdStats Port=xbdStats \u9023\u63a5\u57e0
 
 [PORTUGUÊS]
 MEMORY=Memória
@@ -673,3 +694,6 @@ Item 8 Title=Título do Item 8
 Item 8 Path=Caminho do Item 8
 YX Button Action=Ação do Botão YX
 Advanced Mode=Modo Avançado
+Enable Discord Presence=Ativar Presença do Discord
+xbdStats IPAddress=xbdStats Endereço IP
+xbdStats Port=xbdStats Porta
